# fast-canny

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  download_coco_images.py
.devcontainer/: devcontainer.json
benchmark/: CMakeLists.txt  Makefile  cmake_install.cmake
benchmark/src/: double_threshold_benchmark.cpp  fast_canny_benchmark.cpp  gaussian_filter_benchmark.cpp  gradient_benchmark.cpp  hysteresis_benchmark.cpp  non_maxima_suppression_benchmark.cpp  opencv_benchmark.cpp
core/: CMakeLists.txt  Makefile  cmake_install.cmake
core/src/: double_threshold.cpp  double_threshold.h  fast_canny.cpp  fast_canny.h  gaussian_filter.cpp  gaussian_filter.h  gradient.cpp  gradient.h  hysteresis.cpp  hysteresis.h  non_maxima_suppression.cpp  non_maxima_suppression.h  padding.cpp  padding.h
opencv_project-prefix/src/opencv_project-stamp/: opencv_project-gitclone-lastrun.txt
opencv_project-prefix/tmp/: opencv_project-cfgcmd.txt  opencv_project-gitclone.cmake  opencv_project-gitupdate.cmake  opencv_project-mkdirs.cmake
tool/: CMakeLists.txt
tool/src/: detect_edge.cpp
